update resume download

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags img/fav-icon.png -->
-        <title>Sam Mendimasa - Resume / CV / </title>
+        <title>Varisara Muangrat - Resume / CV / </title>
 
         <!-- Icon css link -->
         <link href="vendors/material-icon/css/materialdesignicons.min.css" rel="stylesheet">
@@ -85,26 +85,29 @@
                         <div class="col-md-5">
                             <div class="person_img">
                                 <img src="image/LinkedIn.JPG" alt="">
-                                <a class="download_btn" href="docs/Sam.Mendimasa.Resume.pdf" target="_blank"><span>Download Resume</span></a>
+                                <a class="download_btn" href="resume/Varisara Muangrat Resume.docx" target="_blank"><span>Download Resume</span></a>
                             </div>
                         </div>
                         <div class="col-md-7">
                             <div class="row person_details">
                                 <h3>Hi I'm <span>Lizzie Muangrat</span></h3>
-                                <h4>Systems Engineer and Information Systems Student</h4>
-                                <p>My name is Varisara Muangrat. I am currently in the undergraduate program at the University of Maryland Baltimore County, pursuing a degree in Information Systems with a minor in Computer Science. My  My research is focused on cloud security concerns in Docker and RedHat OpenShift. . </p>
+                                <h4>Computer Science and Information Systems Student</h4>
+                                <p>My name is Varisara Muangrat. I am currently in the undergraduate program at the University of Maryland 
+                                Baltimore County, pursuing a degree in Information Systems with a minor in Computer Science. I have currently worked
+                                for UMBC's Division of Information Technology since 2017, where I worked with users to design solutions such as data 
+                                visualization and tables,working extensively with databases. In my free time I enjoy being a part of UMBC's IEEE club and playing tennis.   </p>
                                <!---- <div class="person_information"> -->
 
                                     <br />
 
                                     <div class="about_columns_half">
                                     <h4>Interests</h4>
+                                    <li> Systems Engineering</li>
+                                    <li> Data Visualization</li>
                                     <li> Software Developement</li>
-                                    <li> Mobile Computing</li>
-                                    <li> Cloud Security</li>
                                     <li> Application / Web Security</li>
                                     <li> Systems Security</li>
-                                    <li> Web Development</li>
+                                    <li> Web Developement</li>
                                     
                                     </div>
 
